--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -33,6 +33,12 @@
     width: 40px;
     margin-right: 15px;
 }
+.footer-logo {
+    width: 200px; 
+    height: auto; 
+    margin-bottom: 20px; 
+    
+}
 .footer hr{
     width: 100%;
     height: 2px;
