add payment page

--- a/src/components/ExploreMenu/ExploreMenu.css
+++ b/src/components/ExploreMenu/ExploreMenu.css
@@ -33,7 +33,7 @@
 }
 .explore-menu-list-item p{
     margin-top: 10px;
-    color: #747474;
+    color: black;
     font-size: max(1.4vw,16px);
     cursor: pointer;
 }
