--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
     display: flex;
     list-style: none;
     gap: 20px;
-    color: #49557e;
+    color: black;
     font-size: 18px;
 
 }
@@ -24,7 +24,7 @@
 .navbar button{
     background: transparent;
     font-size: 16px;
-    color: #49557e;
+    color: black;
     border: 1px solid tomato;
     padding: 10px 30px;
     border-radius: 50px;
@@ -97,6 +97,3 @@
         display: none;
     }   
 }
-
-
-
