--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -25,7 +25,7 @@
     background: transparent;
     font-size: 16px;
     color: black;
-    border: 1px solid tomato;
+    border: 1px solid black;
     padding: 10px 30px;
     border-radius: 50px;
     cursor: pointer;
